SERVER-51795 Allow explain for all read concern levels